iisnode/DEV-1312-stderr-1589407929115.txt
Application has thrown an uncaught exception and is terminated:
C:\inetpub\wwwroot\LoanerLaptop\server\config\crm.js:70
                /res1.send(data);
                ^
SyntaxError: Invalid regular expression: missing /
    at Object.exports.runInThisContext (vm.js:76:16)
    at Module._compile (module.js:542:28)
    at Object.Module._extensions..js (module.js:579:10)
    at Module.load (module.js:487:32)
    at tryModuleLoad (module.js:446:12)
    at Function.Module._load (module.js:438:3)
    at Module.require (module.js:497:17)
    at require (internal/module.js:20:19)
    at Object.<anonymous> (C:\inetpub\wwwroot\LoanerLaptop\server\config\routes.js:5:11)
    at Module._compile (module.js:570:32)
